--- a/jennifer/about.html
+++ b/jennifer/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/mental.css">
     <script src="https://kit.fontawesome.com/b8e6120963.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -42,13 +43,45 @@
     </div>
         <div class="flex-about">
             <div class="content-about">
-                <b><p class="content-title">Apple Cider</p></b>
+                <b><p class="content-title">Mental health – good or bad, we all have it.</p></b>
             <hr>
-                <p class="content-fill">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, facilis minus nemo esse voluptatibus ipsam! Alias sed animi quisquam sint quaerat, distinctio ex saepe corrupti. Magni quaerat placeat perferendis sit?</p>
+                <p class="content-fill">Our overall mental health is as important as our physical health. While we try to keep our bodies, outfit and custom shirts fit and healthy, it is also necessary to keep our minds fit and strong too. However, most of us have no idea on how to keep our mental health in tiptop shape, and how we could understand those who are experiencing mental health concerns.</p>
+                <p class="content-fill">Almost half of the young generation across the globe are experiencing mental health problems. Most of them are experiencing different forms of depression and anxiety caused by peer pressure, family concerns, and poor self-esteem. Also, those who are experiencing these resort to a lot of dangerous activities that could lead to serious complications. However, it is sad to know that others dismiss this concern as plain drama or just lazy to move on with their lives.</p>
+                <b><p class="content-fill">“He/she is simply sad” – The Stigmas of Mental Health</p></b>
+                <p class="content-fill">The stigma of mental health problems come from those who do not really understand what is going on with someone who is mentally ill or deficient. While those with depression are being dismissed as lonely and only needs a push to move forward, many do not really seem to care for those who are anxious and people with deteriorating self-consciousness. Even those who have died of suicide just get tagged as cowards or immature individuals. This kind of stigma in our society has to end right now.</p>
+                <p class="content-fill">Get in touch today, to find out how we can support you!</p>
                     <a class="read-more-about" href="#">READ MORE</a>
             </div>
             <div class="image-about">
-                <img src="https://lh3.googleusercontent.com/proxy/UqjCS2MtoaBLWttauYzgeWZSjkFbUnIRVTUrOro8byLhY7k7LlzbE1K7O_7XAJ5QTYBiSpT2a_5FWMaC4Y2M0KYVLHDIQ_f5XAL0oddlZiM5n3MCv2F4In0_XqsC6OUR5g"></div>
+                <img src="http://www.pngmart.com/files/10/Chinese-Flower-Transparent-Background.png"></div>
+        </div>
+        <div class="section-team" style="padding-bottom: 0px;">
+            <h1>Meet The Team</h1>
+            <div class="magazine-health">
+                <div class="grid-item">
+                    <p>test</p>
+                </div>
+                <div class="grid-item item2">
+                    <p>test</p>
+                </div>
+                <div class="grid-item item3">
+                    <p>test</p>
+                </div>
+                <div class="grid-item item4">
+                    <p>test</p>
+                </div>
+                <div class="grid-item item5">
+                    <p>test</p>
+                </div>
+                <div class="grid-item item6">
+                    <p>test</p>
+                </div>
+            </div>
+        </div>
+        <div class="more-stories">
+            <button class="button-stories">
+                More Stories
+            </button>
         </div>
         <div class="footer">
             <div class="footer-content">
@@ -57,34 +90,64 @@
                         <div class="row-footer">
                             <h1 class="footerh1">The Mind Map</h1>
                         </div>
-                        <div class="row-footer">
-                            <h2 class="footerHeader">Stories</h2>
-                            <p>
-                                <a class="footerLink" href="#">Magazine</a>
-                                <a class="footerLink" href="#">Read About Therapy</a>
-                            </p>
+                        <div class="row-footer" style="padding-left:25px !important;">
+                            <p>sign up for regular news and wellbeing tips!</p>
                         </div>
-                        <div class="row-footer">
-                            <h2 class="footerHeader">Find Help</h2>
-                            <p>
-                                <a class="footerLink" href="#">Service Near You</a>
-                                <a class="footerLink" href="#">Resources</a>
-                                <a class="footerLink" href="#">Theraphy</a>
-                            </p>
-                        </div>
-                        <div class="row-footer">
-                            <h2 class="footerHeader">Education</h2>
-                            <p>
-                                <a class="footerLink" href="#">Mental Health First Aid</a>
-                                <a class="footerLink" href="#">Courses</a>
-                                <a class="footerLink" href="#">Case Studies</a>
-                            </p>
+                        <div class="newsletter-form">
+                            <div>
+                            <input type="email" class="email-input" placeholder="email">
+                            </div>
+                            <div class="subscribe-btn">
+                            <input type="submit" class="email-submit" value="Subscribe">
+                            </div>
                         </div>
                     </div>
-
+                    <hr>
                 </div>
                 <div class="copyright">
-                    <h2 class="copyright-content">Copyright ©2020. Jennifer</h2>
+                    <div class="copyright-content">
+                        <div>
+                            <p>The Mind Map @ 2020</p>
+                        </div>
+                        <div>
+                            <p>Website By Jennifer</p>
+                        </div>
+                    </div>
+                    <div class="copyright-content">
+                        <div>
+                            <p>Social Media</p>
+                        </div>
+                        <div class="icon-social">
+                            <div>
+                            <a href="http://www.instagram.com/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            </div>
+                            <div>
+                            <a href="https://www.facebook.com/" >
+                                <i class="fab fa-facebook-square"></i>
+                            </a>
+                            </div>
+                            <div>
+                            <a href="https://twitter.com/">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            </div>
+                            <div>
+                            <a href="https://www.youtube.com/">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="copyright-content">
+                        <div>
+                            <p>About & Contact</p>
+                        </div>
+                        <div>
+                            <p>Privacy Policy & Terms</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
