--- a/jennifer/mental.html
+++ b/jennifer/mental.html
@@ -41,23 +41,23 @@
         </div>
     </div>
     <div class="magazine-health">
-        <div class="grid-item">
-            <p>test</p>
+        <div class="grid-item" id="grid-item">
+            <p id="text-desc">test</p>
         </div>
-        <div class="grid-item item2">
-            <p>test</p>
+        <div class="grid-item item2" id="grid-item2">
+            <p id="text-desc">test</p>
         </div>
-        <div class="grid-item item3">
-            <p>test</p>
+        <div class="grid-item item3" id="grid-item">
+            <p id="text-desc">test</p>
         </div>
-        <div class="grid-item item4">
-            <p>test</p>
+        <div class="grid-item item4" id="grid-item">
+            <p id="text-desc">test</p>
         </div>
-        <div class="grid-item item5">
-            <p>test</p>
+        <div class="grid-item item5" id="grid-item">
+            <p id="text-desc">test</p>
         </div>
-        <div class="grid-item item6">
-            <p>test</p>
+        <div class="grid-item item6" id="grid-item">
+            <p id="text-desc">test</p>
         </div>
     </div>
     <div class="more-stories">
@@ -104,3 +104,5 @@
             </div>
         </div>
     </div>
+</body>
+<script src="js/show.js"></script>
