add stories-click page and modify mental footer

--- a/jennifer/mental.html
+++ b/jennifer/mental.html
@@ -73,34 +73,64 @@
                     <div class="row-footer">
                         <h1 class="footerh1">The Mind Map</h1>
                     </div>
-                    <div class="row-footer">
-                        <h2 class="footerHeader">Stories</h2>
-                        <p>
-                            <a class="footerLink" href="#">Magazine</a>
-                            <a class="footerLink" href="#">Read About Therapy</a>
-                        </p>
+                    <div class="row-footer" style="padding-left:25px !important;">
+                        <p>sign up for regular news and wellbeing tips!</p>
                     </div>
-                    <div class="row-footer">
-                        <h2 class="footerHeader">Find Help</h2>
-                        <p>
-                            <a class="footerLink" href="#">Service Near You</a>
-                            <a class="footerLink" href="#">Resources</a>
-                            <a class="footerLink" href="#">Theraphy</a>
-                        </p>
-                    </div>
-                    <div class="row-footer">
-                        <h2 class="footerHeader">Education</h2>
-                        <p>
-                            <a class="footerLink" href="#">Mental Health First Aid</a>
-                            <a class="footerLink" href="#">Courses</a>
-                            <a class="footerLink" href="#">Case Studies</a>
-                        </p>
+                    <div class="newsletter-form">
+                        <div>
+                        <input type="email" class="email-input" placeholder="email">
+                        </div>
+                        <div class="subscribe-btn">
+                        <input type="submit" class="email-submit" value="Subscribe">
+                        </div>
                     </div>
                 </div>
-
+                <hr>
             </div>
             <div class="copyright">
-                <h2 class="copyright-content">Copyright ©2020. Jennifer</h2>
+                <div class="copyright-content">
+                    <div>
+                        <p>The Mind Map @ 2020</p>
+                    </div>
+                    <div>
+                        <p>Website By Jennifer</p>
+                    </div>
+                </div>
+                <div class="copyright-content">
+                    <div>
+                        <p>Social Media</p>
+                    </div>
+                    <div class="icon-social">
+                        <div>
+                        <a href="http://www.instagram.com/">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        </div>
+                        <div>
+                        <a href="https://www.facebook.com/" >
+                            <i class="fab fa-facebook-square"></i>
+                        </a>
+                        </div>
+                        <div>
+                        <a href="https://twitter.com/">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        </div>
+                        <div>
+                        <a href="https://www.youtube.com/">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="copyright-content">
+                    <div>
+                        <p>About & Contact</p>
+                    </div>
+                    <div>
+                        <p>Privacy Policy & Terms</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
