modify responsive page home page & all menubar

--- a/jennifer/about.html
+++ b/jennifer/about.html
@@ -28,13 +28,25 @@
                 <i class="fab fa-youtube"></i>
             </a>
         </div>
+        <div class="menu menu-responsive">
+            <div class="menu-content">
+                <ul class="topnav">
+                <li> <a href="about.html">About</a></li>
+                <li> <a href="stories.html">Stories</a></li>
+                <li> <a href="mental.html">Mental Health Issues</a></li>
+                <li> <a href="findhelp.html">Find Help</a></li>
+                <li class="icon">
+                    <a href="javascript:void(0);" onclick="myFunction()">☰</a>
+                </li>
+            </ul>
+            </div>
+        </div>
         <div class="menu">
             <div class="title">
-                <a href="#"><h2>The Mind Map</h2></a> 
+                <a href="home.html"><h2>The Mind Map</h2></a> 
              </div>
              <div class="menu-content">
             <ul class="topnav">
-                <li> <a href="home.html">Home </a></li>
                 <li> <a href="about.html">About</a></li>
                 <li> <a href="stories.html">Stories</a></li>
                 <li> <a href="mental.html">Mental Health Issues</a></li>
