modify footer, menubar with dropdown, stories page

--- a/jennifer/about.html
+++ b/jennifer/about.html
@@ -33,7 +33,7 @@
                 <ul class="topnav">
                 <li> <a href="about.html">About</a></li>
                 <li> <a href="stories.html">Stories</a></li>
-                <li> <a href="mental.html">Mental Health Issues</a></li>
+                <li> <a href="mental.html">Mental Health Disorders</a></li>
                 <li> <a href="findhelp.html">Find Help</a></li>
                 <li class="icon">
                     <a href="javascript:void(0);" onclick="myFunction()">☰</a>
