add findtherapist page, edit about page, edit mental health page,modify footer and modify menubar

--- a/jennifer/findtherapist.html
+++ b/jennifer/findtherapist.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/mental.css">
+    <link rel="stylesheet" href="css/findtherapist.css">
     <script src="https://kit.fontawesome.com/b8e6120963.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -28,50 +28,58 @@
                 <i class="fab fa-youtube"></i>
             </a>
         </div>
-        <div class="menu menu-responsive">
-            <div class="menu-content">
-                <ul class="topnav">
-                <li> <a href="about.html">About</a></li>
-                <li> <a href="stories.html">Stories</a></li>
-                <li> <a href="mental.html">Mental Health Disorders</a></li>
-                <li> <a href="findhelp.html">Find Help</a></li>
-                <li class="icon">
-                    <a href="javascript:void(0);" onclick="myFunction()">☰</a>
-                </li>
-            </ul>
-            </div>
-        </div>
+    </div>
         <div class="menu">
             <div class="title">
-                <a href="home.html"><h2>The Mind Map</h2></a> 
+                <a href="home.html"><h2>Ikigai</h2></a> 
              </div>
              <div class="menu-content">
-            <ul class="topnav">
-                <li> <a href="about.html">About</a></li>
-                <li> <a href="stories.html">Stories</a></li>
-                <li> <a href="mental.html">Mental Health Issues</a></li>
-                <li> <a href="findhelp.html">Find Help</a></li>
+                <ul class="topnav">
+                <li> <a href="findtherapist.html">Find A Therapist</a></li>
                 <li class="icon">
                     <a href="javascript:void(0);" onclick="myFunction()">☰ Menu</a>
                 </li>
             </ul>
             </div>
         </div>
-    </div>
-        <div class="flex-about">
-            <div class="content-about">
-                <b><p class="content-title">About Us</p></b>
-                <img src="https://cdn-prod.medicalnewstoday.com/content/images/hero/321/321593/321593_1100.jpg">
-                <p class="content-fill">Our overall mental health is as important as our physical health. While we try to keep our bodies, outfit and custom shirts fit and healthy, it is also necessary to keep our minds fit and strong too. However, most of us have no idea on how to keep our mental health in tiptop shape, and how we could understand those who are experiencing mental health concerns.</p>
-                <p class="content-fill">Almost half of the young generation across the globe are experiencing mental health problems. Most of them are experiencing different forms of depression and anxiety caused by peer pressure, family concerns, and poor self-esteem. Also, those who are experiencing these resort to a lot of dangerous activities that could lead to serious complications. However, it is sad to know that others dismiss this concern as plain drama or just lazy to move on with their lives.</p>
-                <b><p class="content-fill">“He/she is simply sad” – The Stigmas of Mental Health</p></b>
-                <p class="content-fill">The stigma of mental health problems come from those who do not really understand what is going on with someone who is mentally ill or deficient. While those with depression are being dismissed as lonely and only needs a push to move forward, many do not really seem to care for those who are anxious and people with deteriorating self-consciousness. Even those who have died of suicide just get tagged as cowards or immature individuals. This kind of stigma in our society has to end right now.</p>
-                <p class="content-fill">Get in touch today, to find out how we can support you!</p>
+        <div class="content">
+            <p>Connect with the most trusted</p>
+            <p style="margin-bottom:5px;">Psychologist & Counsellors in the World</p>
+            <p style="font-size:20px;">We Understand, We Care, We Heal</p>
+        </div>
+        <div class="magazine-3-3" style="padding-top:10px;">
+            <div class="grid-item" id="grid-item">
+                <p id="text-desc">test</p>
             </div>
-        <div class="more-stories">
+            <div class="grid-item item2" id="grid-item2">
+                <p id="text-desc">test</p>
+            </div>
+            <div class="grid-item item2" id="grid-item2">
+                <p id="text-desc">test</p>
+            </div>
+        </div>
+        <div class="magazine-3-3">
+            <div class="grid-item" id="grid-item">
+                <p id="text-desc">test</p>
+            </div>
+            <div class="grid-item item2" id="grid-item2">
+                <p id="text-desc">test</p>
+            </div>
+            <div class="grid-item item2" id="grid-item2">
+                <p id="text-desc">test</p>
+            </div>
+        </div>
+        <div class="more-button">
+            <div>
             <a href="mental.html"><button class="button-stories">
                 Learn More
             </button></a>
+            </div>
+            <div>
+                <a href="mental.html"><button class="button-stories">
+                    Read Stories
+            </button></a>
+            </div>
         </div>
         <div class="footer">
             <div class="footer-content">
@@ -139,10 +147,10 @@
                 </div>
             </div>
         </div>
-    </body>
-    <script src="js/show.js"></script>
-    <script>
-        function myFunction() {
-        document.getElementsByClassName("topnav")[0].classList.toggle("responsive");
-    }
-    </script>
+</body>
+<script src="js/show.js"></script>
+<script>
+    function myFunction() {
+    document.getElementsByClassName("topnav")[0].classList.toggle("responsive");
+}
+</script>
