--- a/jennifer/about.html
+++ b/jennifer/about.html
@@ -43,13 +43,18 @@
         </div>
         <div class="menu">
             <div class="title">
-                <a href="home.html"><h2>The Mind Map</h2></a> 
+                <a href="home.html"><h2>Ikigai</h2></a> 
              </div>
              <div class="menu-content">
-            <ul class="topnav">
+                <ul class="topnav">
                 <li> <a href="about.html">About</a></li>
                 <li> <a href="stories.html">Stories</a></li>
-                <li> <a href="mental.html">Mental Health Issues</a></li>
+                <li> <a href="mental.html">Mental Health Disorders</a>
+                    <ul>
+                        <li> <a href="OrderForm.html">Courses  </a> </li>
+                        <li> <a href="Testimonials.html">Case Study </a></li>
+                    </ul>
+                </li>
                 <li> <a href="findhelp.html">Find Help</a></li>
                 <li class="icon">
                     <a href="javascript:void(0);" onclick="myFunction()">☰ Menu</a>
@@ -78,7 +83,7 @@
                 <div class="container-footer">
                     <div class="row">
                         <div class="row-footer">
-                            <h1 class="footerh1">The Mind Map</h1>
+                            <h1 class="footerh1">Ikigai</h1>
                         </div>
                         <div class="row-footer" style="padding-left:25px !important;">
                             <p>sign up for regular news and wellbeing tips!</p>
