--- a/jennifer/findhelp.html
+++ b/jennifer/findhelp.html
@@ -44,7 +44,7 @@
         </div>
         <div class="menu">
             <div class="title">
-                <a href="home.html"><h2>The Mind Map</h2></a> 
+                <a href="home.html"><h2>Ikigai</h2></a> 
              </div>
              <div class="menu-content">
             <ul class="topnav">
@@ -106,7 +106,7 @@
             <div class="container-footer">
                 <div class="row">
                     <div class="row-footer">
-                        <h1 class="footerh1">The Mind Map</h1>
+                        <h1 class="footerh1">Ikigai</h1>
                     </div>
                     <div class="row-footer" style="padding-left:25px !important;">
                         <p>sign up for regular news and wellbeing tips!</p>
@@ -125,7 +125,7 @@
             <div class="copyright">
                 <div class="copyright-content">
                     <div>
-                        <p>The Mind Map @ 2020</p>
+                        <p>Ikigai @ 2020</p>
                     </div>
                     <div>
                         <p>Website By Jennifer</p>
