--- a/jennifer/findtherapist.html
+++ b/jennifer/findtherapist.html
@@ -86,7 +86,7 @@
                 <div class="container-footer">
                     <div class="row">
                         <div class="row-footer">
-                            <h1 class="footerh1">The Mind Map</h1>
+                            <h1 class="footerh1">Ikigai</h1>
                         </div>
                         <div class="row-footer" style="padding-left:25px !important;">
                             <p>sign up for regular news and wellbeing tips!</p>
