--- a/jennifer/stories.html
+++ b/jennifer/stories.html
@@ -42,7 +42,7 @@
         </div>
         <div class="menu">
             <div class="title">
-                <a href="home.html"><h2>The Mind Map</h2></a> 
+                <a href="home.html"><h2>Ikigai</h2></a> 
              </div>
              <div class="menu-content">
                 <ul class="topnav">
@@ -101,7 +101,7 @@
             <div class="container-footer">
                 <div class="row">
                     <div class="row-footer">
-                        <h1 class="footerh1">The Mind Map</h1>
+                        <h1 class="footerh1">Ikigai</h1>
                     </div>
                     <div class="row-footer" style="padding-left:25px !important;">
                         <p>sign up for regular news and wellbeing tips!</p>
