--- a/jennifer/stories.html
+++ b/jennifer/stories.html
@@ -32,12 +32,18 @@
                 <ul class="topnav">
                 <li> <a href="about.html">About</a></li>
                 <li> <a href="stories.html">Stories</a></li>
-                <li> <a href="mental.html">Mental Health Issues</a></li>
+                <li> <a href="mental.html">Mental Health Disorders</a></li>
                 <li> <a href="findhelp.html">Find Help</a></li>
                 <li class="icon">
-                    <a href="javascript:void(0);" onclick="myFunction()">☰</a>
+                    <a href="javascript:void(0);" onclick="myFunction()">☰</a>   
                 </li>
             </ul>
+                <li class="icon-next">
+                    <input type="text" style="display:none; width:60%;" class="search-input" id="search-input-responsive" placeholder="search">
+                    <a href="javascript:void(0);" onclick="showSearch()"> <i class="fas fa-search fa-xs"></i>
+                    </a>
+                </li>
+
             </div>
         </div>
         <div class="menu">
@@ -164,7 +170,15 @@
 <script src="js/show.js"></script>
 <script>
     function myFunction() {
-    document.getElementsByClassName("topnav")[0].classList.toggle("responsive");
-}
-</script>
+        document.getElementsByClassName("topnav")[0].classList.toggle("responsive");
+    }
+    function showSearch() {
+            if(document.getElementById("search-input-responsive").style.display == 'inline-block') {
+                document.getElementById("search-input-responsive").style.display = 'none';
+            }
+            else {
+            document.getElementById("search-input-responsive").style.display = "inline-block";
+            }
+        }
+    </script>
 </html>
