add real data for stories & mentalhealth and modify home page responsive

--- a/jennifer/home.html
+++ b/jennifer/home.html
@@ -70,7 +70,7 @@
     </div>
         <div class="flex-content">
             <div class="image">
-                <p class="up-breath">Breath, slow it <br><span>down & think</span> </br><a href="stories.html"><button class="more-stories button-stories">Read More</button></a></br>
+                <p class="up-breath">Breath, slow it <br><span>down & think</span> </br><a href="stories.html"><button class="more-stories button-stories button-responsive" style="color:white;">Read More</button></a></br>
                 </p>  
             </div>
         </div>
