--- a/jennifer/stories-click.html
+++ b/jennifer/stories-click.html
@@ -71,13 +71,12 @@
     </div>
     <div class="page-content">
         <div class="stories-image">
-            <img src="images/stories-click-image1.jpg">
         </div>
     </div>
     <div class="stories-container">
         <div class="page-content">
             <div class="page-container">
-                <h2>Navigating people to better mental health</h2>
+                <h2 class="style-left">Navigating people to better mental health</h2>
                 <p>We are a not for profit, community interest company, navigating young people aged 16 – 30 and beyond to better mental health through journalism, signposting, therapy and Mental Health First Aid.</p>
 <p>training. Our team is made up of industry leading mental health researchers, BACP accredited psychotherapists, journalists and Mental Health First Aid instructors.</p>
 <p>Our innovative approach to helping individuals and organizations access mental health support is informed by our team’s lived experience and a three-year research project supported by the NHS, Liverpool John Moores University, service users and scientists.</p>
@@ -89,8 +88,8 @@
             </div>
         </div>
     </div>
-    <div class="more-stories">
-        <button class="button-stories">
+    <div class="more-stories more-stories-click">
+        <button class="button-stories button-stories-click">
             Other Stories
         </button>
     </div>
