--- a/jennifer/about.html
+++ b/jennifer/about.html
@@ -71,19 +71,34 @@
     </div>
         <div class="flex-about">
             <div class="content-about">
+                <div class="image">
+                </div>
                 <b><p class="content-title">About Us</p></b>
-                <img src="https://cdn-prod.medicalnewstoday.com/content/images/hero/321/321593/321593_1100.jpg">
+                <!-- <img src="https://cdn-prod.medicalnewstoday.com/content/images/hero/321/321593/321593_1100.jpg"> -->
                 <p class="content-fill">Our overall mental health is as important as our physical health. While we try to keep our bodies, outfit and custom shirts fit and healthy, it is also necessary to keep our minds fit and strong too. However, most of us have no idea on how to keep our mental health in tiptop shape, and how we could understand those who are experiencing mental health concerns.</p>
                 <p class="content-fill">Almost half of the young generation across the globe are experiencing mental health problems. Most of them are experiencing different forms of depression and anxiety caused by peer pressure, family concerns, and poor self-esteem. Also, those who are experiencing these resort to a lot of dangerous activities that could lead to serious complications. However, it is sad to know that others dismiss this concern as plain drama or just lazy to move on with their lives.</p>
                 <b><p class="content-fill">“He/she is simply sad” – The Stigmas of Mental Health</p></b>
                 <p class="content-fill">The stigma of mental health problems come from those who do not really understand what is going on with someone who is mentally ill or deficient. While those with depression are being dismissed as lonely and only needs a push to move forward, many do not really seem to care for those who are anxious and people with deteriorating self-consciousness. Even those who have died of suicide just get tagged as cowards or immature individuals. This kind of stigma in our society has to end right now.</p>
                 <p class="content-fill">Get in touch today, to find out how we can support you!</p>
             </div>
-        <div class="more-stories">
-            <a href="mental.html"><button class="button-stories">
-                Learn More
-            </button></a>
-        </div>
+            <div class="container-fluid">
+                <div class="content-fluid">
+                    <div class="panel-tile" style="background-color:#20B2AA !important;">
+                        <div class="central-content">
+                            <a href="mental.html" style="text-decoration:none;  "><h2>Read Stories</br></h2></a>
+                            <div style="padding-top:8vh;">
+                            <button class="more-stories button-stories" style="margin:auto !important;">Learn More</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-tile" style="background-color:#4B0082 !important;">
+                        <div class="central-content">
+                            <a href="mental.html" style="text-decoration:none;"><h2>Mental Health <br>Disorders</br></h2></a>
+                            <button class="more-stories button-stories" style="margin:auto !important;">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         <div class="footer">
             <div class="footer-content">
                 <div class="container-footer">
