--- a/jennifer/findtherapist.html
+++ b/jennifer/findtherapist.html
@@ -9,6 +9,59 @@
     <script src="https://kit.fontawesome.com/b8e6120963.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
+<style>
+    #text-desc {
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        bottom: 0;
+        left: 0;
+        display:flex;
+        justify-content: space-between;
+    }
+    .grid-item p {
+        padding: 0;
+    }
+    .modal {
+        display: none; 
+        position: fixed; 
+        z-index: 1; 
+        padding-top: 100px; 
+        left: 0;
+        top: 0;
+        width: 100%; 
+        height: 100%; 
+        overflow: auto; 
+        background-color: rgb(0,0,0); 
+        background-color: rgba(0,0,0,0.4);
+    }
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 50%;
+    }
+
+    .close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    .button-stories:hover {
+        text-decoration: underline;
+    }
+</style>
 <body>
     <div class="header">
         <div class="search">
@@ -67,37 +120,71 @@
             <p style="font-size:20px;">We Understand, We Care, We Heal</p>
         </div>
         <div class="magazine-3-3" style="padding-top:10px;">
-            <div class="grid-item" id="grid-item">
-                <p id="text-desc">test</p>
+            <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative;">
+                <div id="text-desc" style="width: 100%; background-color: yellow;">
+                    <p>test</p>
+                    <button class="more-stories button-stories booknow" style="margin:0;">Book Now</button>
+                </div>
             </div>
-            <div class="grid-item item2" id="grid-item2">
-                <p id="text-desc">test</p>
+            <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative;">
+                <div id="text-desc" style="width: 100%; background-color: yellow;">
+                    <p>test</p>
+                    <button class="more-stories button-stories booknow" style="margin:0;" class="booknow">Book Now</button>
+                </div>
             </div>
-            <div class="grid-item item2" id="grid-item2">
-                <p id="text-desc">test</p>
+            <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative;">
+                <div id="text-desc" style="width: 100%; background-color: yellow;">
+                    <p>test</p>
+                    <button class="more-stories button-stories booknow" style="margin:0;" class="booknow">Book Now</button>
+                </div>
             </div>
         </div>
         <div class="magazine-3-3">
-            <div class="grid-item" id="grid-item">
-                <p id="text-desc">test</p>
+            <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative;">
+                <div id="text-desc" style="width: 100%; background-color: yellow;">
+                    <p>test</p>
+                    <button class="more-stories button-stories booknow" style="margin:0;" class="booknow">Book Now</button>
+                </div>
             </div>
-            <div class="grid-item item2" id="grid-item2">
-                <p id="text-desc">test</p>
+            <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative;">
+                <div id="text-desc" style="width: 100%; background-color: yellow;">
+                    <p>test</p>
+                    <button class="more-stories button-stories booknow" style="margin:0;" class="booknow">Book Now</button>
+                </div>
             </div>
-            <div class="grid-item item2" id="grid-item2">
-                <p id="text-desc">test</p>
+            <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative;">
+                <div id="text-desc" style="width: 100%; background-color: yellow;">
+                    <p>test</p>
+                    <button class="more-stories button-stories booknow" style="margin:0;" class="booknow">Book Now</button>
+                </div>
             </div>
         </div>
-        <div class="more-button">
-            <div>
-            <a href="mental.html"><button class="button-stories">
-                Learn More
-            </button></a>
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <p style="font-family:titleBold; text-align:center;">Awesome</p>
+              <p style="text-align:center;">Your Online Theraphy session booked!</p>
             </div>
-            <div>
-                <a href="mental.html"><button class="button-stories">
-                    Read Stories
-            </button></a>
+          
+          </div>
+        <div class="container-fluid">
+            <div class="content-fluid">
+                <div class="panel-tile" style="background-color:#20B2AA !important;">
+                    <div class="central-content">
+                        <a href="mental.html" style="text-decoration:none;  "><h2>Read Stories</br></h2></a>
+                        <div style="padding-top:8vh;">
+                        <button class="more-stories button-stories" style="margin:auto !important;">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-tile" style="background-color:#4B0082 !important;">
+                    <div class="central-content">
+                        <a href="mental.html" style="text-decoration:none;"><h2>Mental Health <br>Disorders</br></h2></a>
+                        <button class="more-stories button-stories" style="margin:auto !important;">Learn More</button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer">
@@ -180,4 +267,35 @@
         document.getElementById("search-input-responsive").style.display = "inline-block";
         }
     }
+            // Get the modal
+        var modal = document.getElementById("myModal");
+
+        // Get the button that opens the modal
+        var btn = document.querySelectorAll('.booknow');
+        console.log(btn.length);
+        for (i = 0; i < btn.length; i++) {
+        	btn[i].onclick = function() {
+                modal.style.display = "block";
+                console.log("fff");
+            };
+        }
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks the button, open the modal 
+        // btn.onclick = function() {
+        // modal.style.display = "block";
+        // }
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function() {
+        modal.style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+        }
 </script>
