revisi lumayan banyak

--- a/jennifer/findhelp.html
+++ b/jennifer/findhelp.html
@@ -53,10 +53,18 @@
                 <a href="home.html"><h2>Ikigai</h2></a> 
              </div>
              <div class="menu-content">
-            <ul class="topnav">
+                <ul class="topnav">
                 <li> <a href="about.html">About</a></li>
                 <li> <a href="stories.html">Stories</a></li>
-                <li> <a href="mental.html">Mental Health Issues</a></li>
+                <li> <a href="mental.html">Mental Health Disorders</a>
+                    <ul>
+                        <li> <a href="mentaldisorderclick-2.html">Anxiety</a> </li>
+                        <li> <a href="mentaldisorderclick-3.html">Stress</a></li>
+                        <li> <a href="mentaldisorderclick-5.html">Anger Management</a></li>
+                        <li> <a href="mentaldisorderclick-4.html">Sleep Disorder</a></li>
+                        <li> <a href="mentaldisorderclick-6.html">Depression</a></li>
+                    </ul>
+                </li>
                 <li> <a href="findhelp.html">Find Help</a></li>
                 <li class="icon">
                     <a href="javascript:void(0);" onclick="myFunction()">☰ Menu</a>
@@ -128,48 +136,32 @@
                 </div>
                 <hr>
             </div>
-            <div class="copyright">
-                <div class="copyright-content">
-                    <div>
-                        <p>Ikigai @ 2020</p>
-                    </div>
-                    <div>
-                        <p>Website By Jennifer</p>
+            <div class="all-copyright">
+                <div class="copyright">
+                    <div class="copyright-content">
+                        <p>&copy; 2020 Ikigai. All rights Reserved</p>
                     </div>
                 </div>
-                <div class="copyright-content">
+                <div class="social-media">
                     <div>
-                        <p>Social Media</p>
-                    </div>
-                    <div class="icon-social">
-                        <div>
-                        <a href="http://www.instagram.com/">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        </div>
-                        <div>
-                        <a href="https://www.facebook.com/" >
-                            <i class="fab fa-facebook-square"></i>
-                        </a>
-                        </div>
-                        <div>
-                        <a href="https://twitter.com/">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        </div>
-                        <div>
-                        <a href="https://www.youtube.com/">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="copyright-content">
-                    <div>
-                        <p>About & Contact</p>
+                    <a href="http://www.instagram.com/">
+                        <i class="fab fa-instagram fa-2x"></i>
+                    </a>
                     </div>
                     <div>
-                        <p>Privacy Policy & Terms</p>
+                    <a href="https://www.facebook.com/" >
+                        <i class="fab fa-facebook-square fa-2x"></i>
+                    </a>
+                    </div>
+                    <div>
+                    <a href="https://twitter.com/">
+                        <i class="fab fa-twitter fa-2x"></i>
+                    </a>
+                    </div>
+                    <div>
+                    <a href="https://www.youtube.com/">
+                        <i class="fab fa-youtube fa-2x"></i>
+                    </a>
                     </div>
                 </div>
             </div>
