--- a/jennifer/stories-click-5.html
+++ b/jennifer/stories-click-5.html
@@ -57,8 +57,11 @@
                 <li> <a href="stories.html">Stories</a></li>
                 <li> <a href="mental.html">Mental Health Disorders</a>
                     <ul>
-                        <li> <a href="OrderForm.html">Courses  </a> </li>
-                        <li> <a href="Testimonials.html">Case Study </a></li>
+                        <li> <a href="mentaldisorderclick-2.html">Anxiety</a> </li>
+                        <li> <a href="mentaldisorderclick-3.html">Stress</a></li>
+                        <li> <a href="mentaldisorderclick-5.html">Anger Management</a></li>
+                        <li> <a href="mentaldisorderclick-4.html">Sleep Disorder</a></li>
+                        <li> <a href="mentaldisorderclick-6.html">Depression</a></li>
                     </ul>
                 </li>
                 <li> <a href="findhelp.html">Find Help</a></li>
@@ -71,7 +74,6 @@
     </div>
     <div class="page-content">
         <div class="stories-image">
-            <img src="images/stories-click-image1.jpg">
         </div>
     </div>
     <div class="stories-container">
@@ -86,8 +88,8 @@
             </div>
         </div>
     </div>
-    <div class="more-stories">
-        <button class="button-stories">
+    <div class="more-stories more-stories-click">
+        <button class="button-stories button-stories-click">
             Other Stories
         </button>
     </div>
@@ -128,20 +130,6 @@
                     <div class="copyright-content">
                         <p>&copy; 2020 Ikigai. All rights Reserved</p>
                     </div>
-                        <div class="copyright-menu">
-                            <div class="copyright-menu-content">
-                                <p>Privacy and policy</p>
-                            </div>
-                            <div class="copyright-menu-content">
-                                <p>Terms of Use</p>
-                            </div>
-                            <div class="copyright-menu-content">
-                                <p>Accessibility</p>
-                            </div>
-                            <div class="copyright-menu-content">
-                                <p>Supply Chain Transparency</p>
-                            </div>
-                        </div>  
                 </div>
                 <div class="social-media">
                     <div>
