--- a/jennifer/stories-click-2.html
+++ b/jennifer/stories-click-2.html
@@ -57,8 +57,11 @@
                 <li> <a href="stories.html">Stories</a></li>
                 <li> <a href="mental.html">Mental Health Disorders</a>
                     <ul>
-                        <li> <a href="OrderForm.html">Courses  </a> </li>
-                        <li> <a href="Testimonials.html">Case Study </a></li>
+                        <li> <a href="mentaldisorderclick-2.html">Anxiety</a> </li>
+                        <li> <a href="mentaldisorderclick-3.html">Stress</a></li>
+                        <li> <a href="mentaldisorderclick-5.html">Anger Management</a></li>
+                        <li> <a href="mentaldisorderclick-4.html">Sleep Disorder</a></li>
+                        <li> <a href="mentaldisorderclick-6.html">Depression</a></li>
                     </ul>
                 </li>
                 <li> <a href="findhelp.html">Find Help</a></li>
@@ -83,7 +86,7 @@
 <p>white privilege. Its heavy themes set against a sonic backdrop reminiscent of The Strokes and The </p>
 <p>War On Drugs. We chatted and photographed Sam in Newcastle to get some insights on his own</p>
 <p>mental health.</p>
-<p>Hey Sam, for what in your life do you feel most grateful for?</p>
+<p style="font-family:titleBold;">Hey Sam, for what in your life do you feel most grateful for?</p>
 <p>I am most grateful for my friends because they are wonderful.</p>
 <p>And I’ve got a really, really good group of friends, I know that’s pretty wet but – that’s really important.</p>
 <h6>Family and friends man.</h6>
@@ -92,7 +95,7 @@
 <p>are total cunts probably. If you are lucky enough and you actually find a good set of mates who will </p>
 <p>actually stick by you for life, that’s the most important thing. And there’s nothing I love more than</p>
 <p>getting off to go see them.</p>
-<p>What do you do to stay mentally healthy?</p>
+<p style="font-family:titleBold;">What do you do to stay mentally healthy?</p>
 <p>Do my music. It really is my therapy. I think just writing. Documenting what’s going on in my life. It’s kind of like a diary where I can unload all of the stuff that I want to talk about. And again, just</p>
 <p>looking after, it’s just the same answer really, like if you kind of try and make a conscious effort to be more selfless in your day to day life with even people on the street and friends. You know if you like</p>
 <p>smile, you know that thing where just smiling at someone a day, stuff like that. There’s a lot, you can adopt a lot of little habits like that and make it into your mantra and that makes you, probably makes you happy. I think so. I think everything’s just trial and error.</p>
@@ -100,7 +103,7 @@
 <p>I think probably people will just be like ‘eat well, eat healthy food, set goals’, but I think that, was it someone saying that the main things that a person needs to be mentally stable is that you need to feel wanted or something or that you need to have a purpose? And something else. I think those </p>
 <p>things are pretty imperative to good mental health. I mean whether feeling wanted is somebody having somebody to love or having just being loved in return and purpose is well. I don’t know. You can get purpose from anything can’t you. Because even doing my music and stuff like that, that is </p>
 <p>purpose but it’s not like, I don’t think it’s as important as something like having a kid or something, that’s real. That’s purpose. That’s real responsibility. That’s life changing. I’ve got to guide this little creature through this shit storm. So, yeah. I think I would like to be good at that. That’s purpose.</p>
-<p>Last one. Who inspires you and why?</p>
+<p style="font-family:titleBold;">Last one. Who inspires you and why?</p>
 <p>There are loads of people who inspire me. I don’t know. I love all my singer-songwriters, stuff like that, but when you say who inspires, I kind of instantly on autopilot go to music because we’re talking about music all the time. But I’m trying to think of maybe someone else that inspires me. I’ll </p>
 <p>come back in like a week and answer that. I don’t know. I’ve got like all the wettest answers it’s really bad. Me mam – we’re best mates (joking). I really want to say the wettest answer ever but no I’m not saying that, I can’t say that. What have I become, who am I. Let’s move on. That’s the last </p>
 <p>one. I will think about it. We’ll come back to that one.</p>
@@ -108,8 +111,8 @@
            </div>
         </div>
     </div>
-    <div class="more-stories">
-        <button class="button-stories">
+    <div class="more-stories more-stories-click">
+        <button class="button-stories button-stories-click">
             Other Stories
         </button>
     </div>
@@ -150,20 +153,6 @@
                     <div class="copyright-content">
                         <p>&copy; 2020 Ikigai. All rights Reserved</p>
                     </div>
-                        <div class="copyright-menu">
-                            <div class="copyright-menu-content">
-                                <p>Privacy and policy</p>
-                            </div>
-                            <div class="copyright-menu-content">
-                                <p>Terms of Use</p>
-                            </div>
-                            <div class="copyright-menu-content">
-                                <p>Accessibility</p>
-                            </div>
-                            <div class="copyright-menu-content">
-                                <p>Supply Chain Transparency</p>
-                            </div>
-                        </div>  
                 </div>
                 <div class="social-media">
                     <div>
